--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "timeTrack"
+name = "time_track"
 version = "0.0.0"
 description = "A Tauri App"
 authors = ["you"]
@@ -17,6 +17,7 @@ tauri = { version = "1.5", features = ["http-api", "shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 http-auth-basic = "0.3.3"
+shared = {path = "../shared"}
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
