--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,15 @@ wasm-logger = "0.2.0"
 log = "0.4.20"
 serde_json = "1.0"
 shared = {path = "shared"}
+yew-hooks = "0.3.1"
+
+[dependencies.uuid]
+version = "1.8.0"
+features = [
+    "v4",                # Lets you generate random UUIDs
+    "fast-rng",          # Use a faster (but still sufficiently random) RNG
+    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
+]
 
 [workspace]
 members = [
