--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,9 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 http-auth-basic = "0.3.3"
 shared = {path = "../shared"}
+sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
+tokio = { version = "1", features = ["full"] }
+anyhow = "1.0"
 
 [dependencies.uuid]
 version = "1.8.0"
